@@ -2,8 +2,11 @@ package com.sstlfsj.rule.eval.internal.metric.sql;
 
 import com.sstlfsj.rule.eval.internal.metric.DataTypeCoercion;
 import com.sstlfsj.rule.kernel.api.annotation.MetricSourceType;
+import com.sstlfsj.rule.kernel.api.model.EvalErrorCode;
 import com.sstlfsj.rule.kernel.api.model.MetricQuery;
 import com.sstlfsj.rule.kernel.api.model.MetricValue;
+import com.sstlfsj.rule.kernel.api.model.SourceType;
+import com.sstlfsj.rule.kernel.api.model.ValueSource;
 import com.sstlfsj.rule.kernel.api.spi.metric.MetricSourceHandler;
 import org.springframework.jdbc.core.namedparam.MapSqlParameterSource;
 import org.springframework.jdbc.core.namedparam.NamedParameterJdbcTemplate;
@@ -21,12 +24,11 @@ import java.util.regex.Pattern;
  * datasource/sql 来自 metric.params；handler 只跑只读命名数据源。
  */
 @Component
-@MetricSourceType("SQL_AGGREGATE")
+@MetricSourceType(SourceType.SQL_AGGREGATE)
 public class SqlAggregateMetricSourceHandler implements MetricSourceHandler {
 
     /** 占位符：:ns.field 或 :name（点号命名空间用于 payload./params.）。 */
     private static final Pattern PLACEHOLDER = Pattern.compile(":([a-zA-Z_][\\w.]*)");
-    private static final String METRIC_FETCH_FAIL = "METRIC_FETCH_FAIL";
 
     private final MetricDataSourceRegistry registry;
 
@@ -39,19 +41,19 @@ public class SqlAggregateMetricSourceHandler implements MetricSourceHandler {
         Object dsName = query.params().get("datasource");
         Object sqlText = query.params().get("sql");
         Object dataType = query.params().get("dataType"); // 由 resolver 注入到 params
-        if (dsName == null || sqlText == null) return MetricValue.error(METRIC_FETCH_FAIL);
+        if (dsName == null || sqlText == null) return MetricValue.error(EvalErrorCode.METRIC_FETCH_FAIL);
         NamedParameterJdbcTemplate tpl = registry.template(dsName.toString());
-        if (tpl == null) return MetricValue.error(METRIC_FETCH_FAIL);
+        if (tpl == null) return MetricValue.error(EvalErrorCode.METRIC_FETCH_FAIL);
         try {
             Bound bound = bind(sqlText.toString(), query.subjectId(), query.tenantId(),
                     query.now(), query.eventPayload(), castParams(query.params().get("params")));
             List<Object> firstCol = tpl.query(bound.sql(), bound.params(),
                     (rs, rowNum) -> rs.getObject(1));
-            Object raw = firstCol.isEmpty() ? null : firstCol.get(0);
+            Object raw = firstCol.isEmpty() ? null : firstCol.getFirst();
             String dt = dataType != null ? dataType.toString() : null;
-            return new MetricValue(DataTypeCoercion.coerce(raw, dt), dt, "FETCHED");
+            return new MetricValue(DataTypeCoercion.coerce(raw, dt), dt, ValueSource.FETCHED.tag());
         } catch (Exception e) {
-            return MetricValue.error(METRIC_FETCH_FAIL);
+            return MetricValue.error(EvalErrorCode.METRIC_FETCH_FAIL);
         }
     }
 
